minio/helm/tenant/gateway/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: $Title$-route
  namespace: $Title$
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
      sectionName: http # 对应 Gateway 的监听器名称
  hostnames:
    - "$Title$.app.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: $Title$
          port: 80
